--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -5,9 +5,12 @@ mergeable:
       - do: description
         no_empty:
           enabled: true
-          message: Description matter and should not be empty. Provide detail with **what** was changed, **why** it was changed, and **how** it was changed.
+          message: "Description matter and should not be empty. Provide detail with **what** was changed, **why** it was changed, and **how** it was changed."
       - do: approvals
         min:
           count: 1
         required:
           assignees: true
+     - do: comment
+        payload:
+        body: "Check that your pull request meets the [CONTRIBUTING](./CONTRIBUTING.md) requirements"
