--- a/.github/workflows/run-on-push-to-main.yml
+++ b/.github/workflows/run-on-push-to-main.yml
@@ -17,4 +17,6 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: Package
-          path: build/libs
+          path: |
+            app/build/libs
+            binary-search-trees/build/libs
