--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,12 @@ on:
   push:
 jobs:
   build-gradle-project:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
+
     steps:
       - name: Checkout project sources
         uses: actions/checkout@v3
@@ -16,9 +21,7 @@ jobs:
       - name: Print coverage report
         env:
           report_path: app/build/coverage/test/jacocoTestReport.csv
-        run: |
-          awk -F"," '{ instructions += $4 + $5; covered += $5; branches += $6 + $7; branches_covered +=$7 } END { print "Instructions covered:", covered"/"instructions, "--", 100*covered/instructions"%"; print "Branches covered:", branches_covered"/"branches, "--", 100*branches_covered/branches"%" }' $report_path
-
+        run: awk -F"," '{ instructions += $4 + $5; covered += $5; branches += $6 + $7; branches_covered +=$7 } END { print "Instructions covered:", covered"/"instructions, "--", 100*covered/instructions"%"; print "Branches covered:", branches_covered"/"branches, "--", 100*branches_covered/branches"%" }' $report_path
       - name: Create fat .jar file on main
         if: ${{ github.ref == 'refs/heads/main' }}
         run: ./gradlew app:buildFatJar
