--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Setup Java 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          distribution: temurin
+          java-version: 11
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Run build with Gradle Wrapper
