--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
 
     steps:
       - name: Checkout project sources
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Java 11
         uses: actions/setup-java@v2
         with:
-          distribution: temurin
+          distribution: adopt
           java-version: 11
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
